# showcase_rust_riccsd

./: .gitignore  Cargo.toml  build.rs  env.sh  readme.md  rustfmt.toml
outputs/psi4_exec/: h2o_pp5.inp  h2o_pp5.out
outputs/showcase_exec/: showcase.out
python_scripts/: 01-h2o_gen.ipynb  02-h2o_pp5_gen.ipynb
src/: cc_structs.rs  lib.rs  main.rs  riccsd.rs  tests_h2o.rs  util.rs
tests/: test_h2o.rs
